# mort

./: .gitignore  Cargo.toml  Makefile  build.rs
benches/: perft.rs
scripts/: sprt.sh
src/: chess.rs  error.rs  evaluation.rs  lib.rs  main.rs  perft.rs  rng.rs  search.rs  thread.rs  uci.rs  util.rs
src/chess/: attacks.rs  bitboard.rs  board.rs  fen.rs  magic.rs  mod.rs  movelist.rs  perft.rs  position.rs  state.rs  types.rs
src/chess/board/: draw.rs  fen.rs  layout.rs  legal.rs  mod.rs  movegen.rs  threat.rs  zobrist.rs
src/chess/position/: draw.rs  fen.rs  hashing.rs  layout.rs  movegen.rs  repetition.rs  restore.rs  state.rs  threat.rs  zobrist.rs
src/evaluation/: score.rs  tables.rs
src/search/: data.rs  history.rs  info.rs  limit.rs  node.rs  picker.rs  pv.rs  quiescence.rs  thread.rs  transposition.rs  worker.rs
src/search/history/: butterfly.rs
src/search/transposition/: entry.rs  table.rs  view.rs
src/util/: bench.rs  perft.rs
types/src/: arrayvec.rs  bitboard.rs  castling.rs  chessmove.rs  color.rs  error.rs  file.rs  lib.rs  piece.rs  rank.rs  slider.rs  square.rs  squareset.rs
types/src/slider/: magic.rs
